--- a/crates/ff_egui_app/index.html
+++ b/crates/ff_egui_app/index.html
@@ -135,7 +135,7 @@
 </div>
 
 <!--COI Service Worker. this will reload the page and set the appropriate COI headers -->
-<script src="coi-serviceworker.js"></script>
+<script src="coi-serviceworker.min.js"></script>
 
 <!--Register Service Worker. this will cache the wasm / js scripts for offline use (for PWA functionality). -->
 <!-- Force refresh (Ctrl + F5) to load the latest files instead of cached files  -->
