unminify coi script

--- a/crates/ff_egui_app/index.html
+++ b/crates/ff_egui_app/index.html
@@ -16,7 +16,7 @@
 
     <link data-trunk rel="icon" href="assets/favicon.ico">
 
-    <link data-trunk rel="copy-file" href="assets/coi-serviceworker.min.js"/>
+    <link data-trunk rel="copy-file" href="assets/coi-serviceworker.js"/>
     <link data-trunk rel="copy-file" href="assets/sw.js"/>
     <link data-trunk rel="copy-file" href="assets/base_url.js"/>
     <link data-trunk rel="copy-file" href="assets/worker.js"/>
