add meta tags and twitter image

--- a/crates/ff_egui_app/index.html
+++ b/crates/ff_egui_app/index.html
@@ -7,7 +7,22 @@
 
 <head>
     <!-- change this to your project name -->
-    <title>fluxfox web</title>
+    <title>Fluxfox Web Edition</title>
+
+    <meta property="og:title" content="Fluxfox Web Edition">
+    <meta property="og:description" content="A disk image viewer in Rust compiled for web assembly!">
+    <meta property="og:url" content="https://fluxfox.martypc.net">
+    <meta property="og:image" content="https://fluxfox.martypc.net/assets/fluxfox_logo_twitter.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Fluxfox Web Edition">
+    <meta property="og:image:width" content="900">
+    <meta property="og:image:height" content="471">
+    <meta property="og:locale" content="en_US">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Fluxfox Web Edition">
+    <meta name="twitter:description" content="A disk image viewer in Rust compiled for web assembly!">
+    <meta name="twitter:image" content="https://fluxfox.martypc.net/assets/fluxfox_logo_twitter.png">
 
     <!-- config for our rust wasm binary. go to https://trunkrs.dev/assets/#rust for more customization -->
     <link data-trunk rel="rust" data-wasm-opt="2"/>
