--- a/crates/ff_egui_app/index.html
+++ b/crates/ff_egui_app/index.html
@@ -36,6 +36,7 @@
     <link data-trunk rel="copy-file" href="assets/worker.js"/>
     <link data-trunk rel="copy-file" href="assets/load_worker.js"/>
     <link data-trunk rel="copy-file" href="assets/fluxfox_logo.png" data-target-path="assets"/>
+    <link data-trunk rel="copy-file" href="assets/fluxfox_logo_twitter.png" data-target-path="assets"/>
     <link data-trunk rel="copy-file" href="assets/icon_ios_touch_192.png" data-target-path="assets"/>
 
     <link rel="apple-touch-icon" href="assets/icon_ios_touch_192.png">
